// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exchange should not render filler exchange cards 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-Axmtr htxHJf"
    >
      <div
        class="sm:px-6 lg:px-8 px-4"
      >
        <div
          class="md:h-24 relative flex justify-between h-20"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="bg-logo flex p-2 mr-4 rounded-lg"
            >
              <img
                alt="ARK Logo"
                class="md:h-8 lg:h-10 h-6"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="md:h-24 flex h-20"
            />
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-3 -mt-1 cursor-pointer"
            >
              <div
                class="sc-AxjAm bsDiDM"
                height="42"
                width="42"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-theme-neutral-500 text-xs"
              >
                Your balance
              </div>
              <div
                class="text-theme-neutral-700 text-sm font-bold"
              >
                34,253.75
              </div>
            </div>
            <div
              class="cusror-pointer flex p-1"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxiKw jQtkkF border-theme-neutral-300 -mr-1"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-AxiKw jQtkkF bg-theme-primary-600 border-theme-primary-600 relative rotate-90"
                  >
                    <span
                      class="text-theme-background text-sm"
                    >
                      IO
                    </span>
                    <span
                      class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent transform  bg-theme-primary-100 border-theme-primary-100 bottom-2 -right-4 text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm iepfoc"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div>
      <div
        class="border-t-20 border-theme-neutral-100 pt-16"
      >
        <div
          class="container mx-auto"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 text-3xl font-bold md:text-4xl"
                data-testid="header__title"
              >
                Exchange
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Trade your money safely from the comfort of your wallet.
              </div>
            </div>
          </div>
          <div
            class="mt-8 mb-16"
          >
            <div
              class="relative"
            >
              <div
                class="absolute right-0 w-auto -top-12 space-x-2 swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"
              />
              <div
                class="swiper-container swiper-container-initialized swiper-container-horizontal"
                style="height: 155px;"
              >
                <div
                  class="h-full swiper-wrapper grid grid-cols-8 gap-4"
                  style="webkit-transition-duration: 0ms; transition-duration: 0ms; webkit-transform: translate3d(NaNpx, 0px, 0px); transform: translate3d(NaNpx, 0px, 0px);"
                >
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY border-theme-primary-100 hover:border-theme-background"
                      data-testid="Exchange__exchange-card-changenow-plugin"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-200"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxjAm buCJuk"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            ChangeNOW Plugin
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY border-theme-primary-100 hover:border-theme-background"
                      data-testid="Exchange__exchange-card-binance"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-200"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxjAm buCJuk"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            Binance
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY border-theme-primary-100 hover:border-theme-background"
                      data-testid="Exchange__exchange-card-atomars"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-200"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxjAm buCJuk"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            Atomars
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY col-span-2 border-theme-primary-100"
                      data-testid="Exchange__add-exchange-card"
                    >
                      <div
                        class="flex items-center px-12 my-auto font-semibold text-theme-primary-600"
                      >
                        <div
                          class="sc-AxjAm cpczEI p-4 mr-4 rounded-lg bg-theme-primary-100"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            plus.svg
                          </svg>
                        </div>
                        Add Exchange
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  aria-atomic="true"
                  aria-live="assertive"
                  class="swiper-notification"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="border-t-20 border-theme-neutral-100"
      >
        <div
          class="text-center"
        >
          <svg
            class="mx-auto mt-20"
          >
            exchange-cards-banner.svg
          </svg>
          <div
            class="text-theme-neutral-700 mt-6"
          >
            Select one of the exchanges you have installed
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Exchange should open & close add exchange modal 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-Axmtr htxHJf"
    >
      <div
        class="sm:px-6 lg:px-8 px-4"
      >
        <div
          class="md:h-24 relative flex justify-between h-20"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="bg-logo flex p-2 mr-4 rounded-lg"
            >
              <img
                alt="ARK Logo"
                class="md:h-8 lg:h-10 h-6"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="md:h-24 flex h-20"
            />
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-3 -mt-1 cursor-pointer"
            >
              <div
                class="sc-AxjAm bsDiDM"
                height="42"
                width="42"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-theme-neutral-500 text-xs"
              >
                Your balance
              </div>
              <div
                class="text-theme-neutral-700 text-sm font-bold"
              >
                34,253.75
              </div>
            </div>
            <div
              class="cusror-pointer flex p-1"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxiKw jQtkkF border-theme-neutral-300 -mr-1"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-AxiKw jQtkkF bg-theme-primary-600 border-theme-primary-600 relative rotate-90"
                  >
                    <span
                      class="text-theme-background text-sm"
                    >
                      IO
                    </span>
                    <span
                      class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent transform  bg-theme-primary-100 border-theme-primary-100 bottom-2 -right-4 text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm iepfoc"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div>
      <div
        class="border-t-20 border-theme-neutral-100 pt-16"
      >
        <div
          class="container mx-auto"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 text-3xl font-bold md:text-4xl"
                data-testid="header__title"
              >
                Exchange
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Trade your money safely from the comfort of your wallet.
              </div>
            </div>
          </div>
          <div
            class="mt-8 mb-16"
          >
            <div
              class="relative"
            >
              <div
                class="absolute right-0 w-auto -top-12 space-x-2 swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"
              />
              <div
                class="swiper-container swiper-container-initialized swiper-container-horizontal"
                style="height: 155px;"
              >
                <div
                  class="h-full swiper-wrapper grid grid-cols-8 gap-4"
                  style="webkit-transition-duration: 0ms; transition-duration: 0ms; webkit-transform: translate3d(NaNpx, 0px, 0px); transform: translate3d(NaNpx, 0px, 0px);"
                >
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY border-theme-primary-100 hover:border-theme-background"
                      data-testid="Exchange__exchange-card-changenow-plugin"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-200"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxjAm buCJuk"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            ChangeNOW Plugin
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY border-theme-primary-100 hover:border-theme-background"
                      data-testid="Exchange__exchange-card-binance"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-200"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxjAm buCJuk"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            Binance
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY border-theme-primary-100 hover:border-theme-background"
                      data-testid="Exchange__exchange-card-atomars"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-200"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxjAm buCJuk"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            Atomars
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY col-span-2 border-theme-primary-100"
                      data-testid="Exchange__add-exchange-card"
                    >
                      <div
                        class="flex items-center px-12 my-auto font-semibold text-theme-primary-600"
                      >
                        <div
                          class="sc-AxjAm cpczEI p-4 mr-4 rounded-lg bg-theme-primary-100"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            plus.svg
                          </svg>
                        </div>
                        Add Exchange
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  aria-atomic="true"
                  aria-live="assertive"
                  class="swiper-notification"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="border-t-20 border-theme-neutral-100"
      >
        <div
          class="text-center"
        >
          <svg
            class="mx-auto mt-20"
          >
            exchange-cards-banner.svg
          </svg>
          <div
            class="text-theme-neutral-700 mt-6"
          >
            Select one of the exchanges you have installed
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Exchange should open & close add exchange modal when no existing exchanges 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-Axmtr htxHJf"
    >
      <div
        class="sm:px-6 lg:px-8 px-4"
      >
        <div
          class="md:h-24 relative flex justify-between h-20"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="bg-logo flex p-2 mr-4 rounded-lg"
            >
              <img
                alt="ARK Logo"
                class="md:h-8 lg:h-10 h-6"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="md:h-24 flex h-20"
            />
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-3 -mt-1 cursor-pointer"
            >
              <div
                class="sc-AxjAm bsDiDM"
                height="42"
                width="42"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-theme-neutral-500 text-xs"
              >
                Your balance
              </div>
              <div
                class="text-theme-neutral-700 text-sm font-bold"
              >
                34,253.75
              </div>
            </div>
            <div
              class="cusror-pointer flex p-1"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxiKw jQtkkF border-theme-neutral-300 -mr-1"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-AxiKw jQtkkF bg-theme-primary-600 border-theme-primary-600 relative rotate-90"
                  >
                    <span
                      class="text-theme-background text-sm"
                    >
                      IO
                    </span>
                    <span
                      class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent transform  bg-theme-primary-100 border-theme-primary-100 bottom-2 -right-4 text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm iepfoc"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div>
      <div
        class="border-t-20 border-theme-neutral-100 pt-16"
      >
        <div
          class="container mx-auto"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 text-3xl font-bold md:text-4xl"
                data-testid="header__title"
              >
                Exchange
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Trade your money safely from the comfort of your wallet.
              </div>
            </div>
          </div>
          <div
            class="grid grid-cols-8 gap-4 mt-8 mb-16"
          >
            <div
              class="border-theme-primary-100 flex flex-col h-32 col-span-6 border-2 rounded-lg"
            >
              <div
                class="flex flex-col m-auto text-center"
              >
                <span
                  class="font-semibold"
                >
                  Your Exchange List
                </span>
                <span
                  class="text-theme-neutral-500 m-auto text-sm"
                >
                  You don't have an Exchange yet
                </span>
              </div>
            </div>
            <div
              class="sc-fzoLsD cXrPdY col-span-2 border-theme-primary-100"
              data-testid="Exchange__add-exchange-card"
            >
              <div
                class="flex items-center px-12 my-auto font-semibold text-theme-primary-600"
              >
                <div
                  class="sc-AxjAm cpczEI p-4 mr-4 rounded-lg bg-theme-primary-100"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
                Add Exchange
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="border-t-20 border-theme-neutral-100"
      >
        <svg
          class="mx-auto mt-16"
        >
          no-exchanges-banner.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Exchange should render 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-Axmtr htxHJf"
    >
      <div
        class="sm:px-6 lg:px-8 px-4"
      >
        <div
          class="md:h-24 relative flex justify-between h-20"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="bg-logo flex p-2 mr-4 rounded-lg"
            >
              <img
                alt="ARK Logo"
                class="md:h-8 lg:h-10 h-6"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="md:h-24 flex h-20"
            />
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-3 -mt-1 cursor-pointer"
            >
              <div
                class="sc-AxjAm bsDiDM"
                height="42"
                width="42"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-theme-neutral-500 text-xs"
              >
                Your balance
              </div>
              <div
                class="text-theme-neutral-700 text-sm font-bold"
              >
                34,253.75
              </div>
            </div>
            <div
              class="cusror-pointer flex p-1"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxiKw jQtkkF border-theme-neutral-300 -mr-1"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-AxiKw jQtkkF bg-theme-primary-600 border-theme-primary-600 relative rotate-90"
                  >
                    <span
                      class="text-theme-background text-sm"
                    >
                      IO
                    </span>
                    <span
                      class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent transform  bg-theme-primary-100 border-theme-primary-100 bottom-2 -right-4 text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm iepfoc"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div>
      <div
        class="border-t-20 border-theme-neutral-100 pt-16"
      >
        <div
          class="container mx-auto"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 text-3xl font-bold md:text-4xl"
                data-testid="header__title"
              >
                Exchange
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Trade your money safely from the comfort of your wallet.
              </div>
            </div>
          </div>
          <div
            class="grid grid-cols-8 gap-4 mt-8 mb-16"
          >
            <div
              class="border-theme-primary-100 flex flex-col h-32 col-span-6 border-2 rounded-lg"
            >
              <div
                class="flex flex-col m-auto text-center"
              >
                <span
                  class="font-semibold"
                >
                  Your Exchange List
                </span>
                <span
                  class="text-theme-neutral-500 m-auto text-sm"
                >
                  You don't have an Exchange yet
                </span>
              </div>
            </div>
            <div
              class="sc-fzoLsD cXrPdY col-span-2 border-theme-primary-100"
              data-testid="Exchange__add-exchange-card"
            >
              <div
                class="flex items-center px-12 my-auto font-semibold text-theme-primary-600"
              >
                <div
                  class="sc-AxjAm cpczEI p-4 mr-4 rounded-lg bg-theme-primary-100"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
                Add Exchange
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="border-t-20 border-theme-neutral-100"
      >
        <svg
          class="mx-auto mt-16"
        >
          no-exchanges-banner.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Exchange should render with exchanges 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-Axmtr htxHJf"
    >
      <div
        class="sm:px-6 lg:px-8 px-4"
      >
        <div
          class="md:h-24 relative flex justify-between h-20"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="bg-logo flex p-2 mr-4 rounded-lg"
            >
              <img
                alt="ARK Logo"
                class="md:h-8 lg:h-10 h-6"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="md:h-24 flex h-20"
            />
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-3 -mt-1 cursor-pointer"
            >
              <div
                class="sc-AxjAm bsDiDM"
                height="42"
                width="42"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-theme-neutral-500 text-xs"
              >
                Your balance
              </div>
              <div
                class="text-theme-neutral-700 text-sm font-bold"
              >
                34,253.75
              </div>
            </div>
            <div
              class="cusror-pointer flex p-1"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxiKw jQtkkF border-theme-neutral-300 -mr-1"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-AxiKw jQtkkF bg-theme-primary-600 border-theme-primary-600 relative rotate-90"
                  >
                    <span
                      class="text-theme-background text-sm"
                    >
                      IO
                    </span>
                    <span
                      class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent transform  bg-theme-primary-100 border-theme-primary-100 bottom-2 -right-4 text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm iepfoc"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div>
      <div
        class="border-t-20 border-theme-neutral-100 pt-16"
      >
        <div
          class="container mx-auto"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 text-3xl font-bold md:text-4xl"
                data-testid="header__title"
              >
                Exchange
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Trade your money safely from the comfort of your wallet.
              </div>
            </div>
          </div>
          <div
            class="mt-8 mb-16"
          >
            <div
              class="relative"
            >
              <div
                class="absolute right-0 w-auto -top-12 space-x-2 swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"
              />
              <div
                class="swiper-container swiper-container-initialized swiper-container-horizontal"
                style="height: 155px;"
              >
                <div
                  class="h-full swiper-wrapper grid grid-cols-8 gap-4"
                  style="webkit-transition-duration: 0ms; transition-duration: 0ms; webkit-transform: translate3d(NaNpx, 0px, 0px); transform: translate3d(NaNpx, 0px, 0px);"
                >
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY border-theme-primary-100 hover:border-theme-background"
                      data-testid="Exchange__exchange-card-changenow-plugin"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-200"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxjAm buCJuk"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            ChangeNOW Plugin
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY border-theme-primary-100 hover:border-theme-background"
                      data-testid="Exchange__exchange-card-binance"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-200"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxjAm buCJuk"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            Binance
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY border-theme-primary-100 hover:border-theme-background"
                      data-testid="Exchange__exchange-card-atomars"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-200"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxjAm buCJuk"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            Atomars
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY border-theme-primary-100 hover:border-theme-background"
                      data-testid="Exchange__exchange-card-okex"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-200"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxjAm buCJuk"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            OKEx
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY col-span-2 border-theme-primary-100"
                      data-testid="Exchange__add-exchange-card"
                    >
                      <div
                        class="flex items-center px-12 my-auto font-semibold text-theme-primary-600"
                      >
                        <div
                          class="sc-AxjAm cpczEI p-4 mr-4 rounded-lg bg-theme-primary-100"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            plus.svg
                          </svg>
                        </div>
                        Add Exchange
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY border-theme-primary-100"
                      data-testid="Exchange__blank-card"
                    >
                      <div
                        class="flex items-center px-12 my-auto font-semibold text-theme-primary-100"
                      >
                        <div
                          class="w-12 h-12 mr-4 border-2 rounded-lg border-theme-primary-100"
                        />
                        Exchange Name
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY border-theme-primary-100"
                      data-testid="Exchange__blank-card"
                    >
                      <div
                        class="flex items-center px-12 my-auto font-semibold text-theme-primary-100"
                      >
                        <div
                          class="w-12 h-12 mr-4 border-2 rounded-lg border-theme-primary-100"
                        />
                        Exchange Name
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY border-theme-primary-100"
                      data-testid="Exchange__blank-card"
                    >
                      <div
                        class="flex items-center px-12 my-auto font-semibold text-theme-primary-100"
                      >
                        <div
                          class="w-12 h-12 mr-4 border-2 rounded-lg border-theme-primary-100"
                        />
                        Exchange Name
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  aria-atomic="true"
                  aria-live="assertive"
                  class="swiper-notification"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="border-t-20 border-theme-neutral-100"
      >
        <div
          class="text-center"
        >
          <svg
            class="mx-auto mt-20"
          >
            exchange-cards-banner.svg
          </svg>
          <div
            class="text-theme-neutral-700 mt-6"
          >
            Select one of the exchanges you have installed
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Exchange should select exchange 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-Axmtr htxHJf"
    >
      <div
        class="sm:px-6 lg:px-8 px-4"
      >
        <div
          class="md:h-24 relative flex justify-between h-20"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="bg-logo flex p-2 mr-4 rounded-lg"
            >
              <img
                alt="ARK Logo"
                class="md:h-8 lg:h-10 h-6"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="md:h-24 flex h-20"
            />
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-3 -mt-1 cursor-pointer"
            >
              <div
                class="sc-AxjAm bsDiDM"
                height="42"
                width="42"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-theme-neutral-500 text-xs"
              >
                Your balance
              </div>
              <div
                class="text-theme-neutral-700 text-sm font-bold"
              >
                34,253.75
              </div>
            </div>
            <div
              class="cusror-pointer flex p-1"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxiKw jQtkkF border-theme-neutral-300 -mr-1"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-AxiKw jQtkkF bg-theme-primary-600 border-theme-primary-600 relative rotate-90"
                  >
                    <span
                      class="text-theme-background text-sm"
                    >
                      IO
                    </span>
                    <span
                      class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent transform  bg-theme-primary-100 border-theme-primary-100 bottom-2 -right-4 text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm iepfoc"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div>
      <div
        class="border-t-20 border-theme-neutral-100 pt-16"
      >
        <div
          class="container mx-auto"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 text-3xl font-bold md:text-4xl"
                data-testid="header__title"
              >
                Exchange
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Trade your money safely from the comfort of your wallet.
              </div>
            </div>
          </div>
          <div
            class="mt-8 mb-16"
          >
            <div
              class="relative"
            >
              <div
                class="absolute right-0 w-auto -top-12 space-x-2 swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"
              />
              <div
                class="swiper-container swiper-container-initialized swiper-container-horizontal"
                style="height: 155px;"
              >
                <div
                  class="h-full swiper-wrapper grid grid-cols-8 gap-4"
                  style="webkit-transition-duration: 0ms; transition-duration: 0ms; webkit-transform: translate3d(NaNpx, 0px, 0px); transform: translate3d(NaNpx, 0px, 0px);"
                >
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY bg-theme-success-100 border-theme-success-300 hover:border-theme-success-100"
                      data-testid="Exchange__exchange-card-changenow-plugin"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-200"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxjAm buCJuk"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            ChangeNOW Plugin
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY border-theme-primary-100 hover:border-theme-background"
                      data-testid="Exchange__exchange-card-binance"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-200"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxjAm buCJuk"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            Binance
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY border-theme-primary-100 hover:border-theme-background"
                      data-testid="Exchange__exchange-card-atomars"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-200"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxjAm buCJuk"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            Atomars
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoLsD cXrPdY col-span-2 border-theme-primary-100"
                      data-testid="Exchange__add-exchange-card"
                    >
                      <div
                        class="flex items-center px-12 my-auto font-semibold text-theme-primary-600"
                      >
                        <div
                          class="sc-AxjAm cpczEI p-4 mr-4 rounded-lg bg-theme-primary-100"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            plus.svg
                          </svg>
                        </div>
                        Add Exchange
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  aria-atomic="true"
                  aria-live="assertive"
                  class="swiper-notification"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="border-t-20 border-theme-neutral-100"
      >
        <div
          class="text-center"
        >
          <svg
            class="mx-auto mt-20"
          >
            exchange-cards-banner.svg
          </svg>
          <div
            class="text-theme-neutral-700 mt-6"
          >
            Select one of the exchanges you have installed
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
